adding filters for receipts

--- a/client/views/partials/receipts/receiptReceived.html
+++ b/client/views/partials/receipts/receiptReceived.html
@@ -4,11 +4,11 @@
         <div class="col-sm-10 pall-zero ">
             <ul class="list-inline ">
                 <li class="col-sm-3">
-                    <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'" ng-model="toDate"
-                    ></date-picker>
+                    <date-picker ng-model="filters.fromDate" class="'paymentscontrol'"
+                                 ban-future="'banFutureDate'"></date-picker>
                 </li>
                 <li class="col-sm-3">
-                    <date-picker ng-model="fromDate" class="'paymentscontrol'" ban-future="'banFutureDate'"></date-picker>
+                    <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'"                                         ng-model="filters.toDate"></date-picker>
                 </li>
                 <li class="col-sm-3">
                     <form>
@@ -70,7 +70,7 @@
         <figure>
             <a href="#" ui-sref="receiptEdit">
                 <img src="images/Add_Payments.png" alt="Add Receipt"
-                                                           title="Add Receipt"></a>
+                     title="Add Receipt"></a>
         </figure>
     </div>
 </div>
