--- a/client/views/partials/routeConfig/addRouteConfig.html
+++ b/client/views/partials/routeConfig/addRouteConfig.html
@@ -15,47 +15,52 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="form-group col-xs-12">
-                <div class="styling-input-list">
-                    <input id="source" type="text" class="form-control custom-form-control" placeholder="Source*"
-                           ng-model="route.source.address">
-                    <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
-                        <div class="mapIcon" ng-click="showMapDialog('source')">
-                            <span class="glyphicon glyphicon-map-marker"></span>
-                        </div>
+
+        <div class="form-group col-xs-12">
+            <div class="col-xs-12 styling-input-list">
+                <input id="source" type="text" class="form-control custom-form-control" placeholder="Source*"
+                       ng-model="route.source.address">
+                <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="showMapDialog('source')">
+                        <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+                    </button>
                 </div>
             </div>
-
-            <div class="form-group col-xs-12">
-                <div class="styling-input-list">
-                    <input id="destination" type="text" class="form-control custom-form-control"
-                           placeholder="Destination*"
-                           ng-model="route.destination.address">
-                    <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
-                        <div class="mapIcon" ng-click="showMapDialog('destination')">
-                            <span class="glyphicon glyphicon-map-marker"></span>
-                        </div>
+        </div>
+        <div class="form-group col-xs-12">
+            <div class="col-xs-12 styling-input-list">
+                <input id="destination" type="text" class="form-control custom-form-control" placeholder="Destination*"
+                       ng-model="route.destination.address">
+                <!--<label class="focus-effect-for-input" aria-hidden="true"></label>-->
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="showMapDialog('destination')">
+                        <span class="glyphicon glyphicon-map-marker"></span>
+                    </button>
                 </div>
             </div>
         </div>
         <script type="text/ng-template" id="pickRouteLocation.html">
-            <span class="close-btn" style="z-index:100;" ng-click="cancel()"><i class="fa fa-close"></i></span>
+            <span class="close-btn" style="z-index:100;" ng-click="cancel()"><i class="fa fa-close pull-right" style="margin:5px"></i></span>
             <div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyBcXKj1iAjyIin_j2vbiCqke1oDLGgIsAM"
                  map-lazy-load-params="{{googleMapsUrl}}">
-
-                <ng-map center="{{accountHomeLocation}}" zoom="12"></ng-map>
+                <ng-map center="{{accountHomeLocation}}" zoom="13"></ng-map>
             </div>
         </script>
-
         <div class="col-xs-12">
             <div class="col-xs-4 mtb-25 sub-can">
                 <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
                 <button type="submit" class="btn can  last" ng-click="addOrUpdateConfig()">Submit</button>
             </div>
         </div>
+        <div class="clearfix"></div>
+         <div class="col-xs-4 col-xs-push-4">
+             <div class="alert alert-danger" role="alert" ng-show="route.errors.length">
+                 <ul>
+                     <li ng-repeat="error in route.errors">{{error}}</li>
+                 </ul>
+             </div>
+         </div>
     </div>
-
-
-
+</div>
 
