--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -10,12 +10,13 @@
                 </uib-accordion-heading>
                 <div class="col-xs-12">
                     <div class="col-xs-12 col-sm-6">
-                        <div class="form-group styling-input-list">
+                        <div class="styling-input-list">
                             <input type="text" class="form-control custom-form-control"
                                    ng-model="accountDetails.userName" ng-change="checkAvailablity()"/>
                             <label class="focus-effect-for-input">User Name*</label>
+                            <span class="statusError">{{availableStatusError}}</span>
                         </div>
-                        {{availableStatusError}}
+
                         <div class="form-group styling-input-list">
                             <input type="text" class="form-control custom-form-control"
                                    ng-model="accountDetails.contactName"/>
