--- a/client/views/partials/gps/gpsReports.html
+++ b/client/views/partials/gps/gpsReports.html
@@ -20,7 +20,7 @@
                         <!--<button type="button" class="btn go">Go</button>-->
                     </li>
 
-                    <li class="sea-wid" style="width:39.5%;">
+                    <li class="sea-wid">
                         <div class="search-box reports-search">
                             <!--<input type="text" class="form-control textfiled1" placeholder="Search by truck no">-->
 
