--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -25,11 +25,11 @@
         <div class="col-sm-10 pall-zero ">
             <ul class="list-inline ">
                 <li class="col-sm-3">
-                    <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'" ng-model="toDate"
+                    <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'" ng-model="fromDate"
                     ></date-picker>
                 </li>
                 <li class="col-sm-3">
-                    <date-picker ng-model="fromDate" class="'paymentscontrol'" ban-future="'banFutureDate'"></date-picker>
+                    <date-picker ng-model="toDate" class="'paymentscontrol'" ban-future="'banFutureDate'"></date-picker>
                 </li>
                 <li class="col-sm-3">
                     <form>
