--- a/client/views/partials/admin/services/deviceManagement.html
+++ b/client/views/partials/admin/services/deviceManagement.html
@@ -18,7 +18,7 @@
             <td data-title="'S No'">
                 {{$index+1}}
             </td>
-            <td data-title="'Field Executive'" sortable="'_id.employeeName'" class="clickable-item">
+            <td data-title="'Field Executive'" sortable="'employeeName'" class="clickable-item">
                 {{employee._id.employeeName[0]}}
             </td>
             <td data-title="'Assigned Devices'" sortable="'totalDevices'" class="clickable-item">
