--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -709,6 +709,9 @@ table.dataTable thead td, table.dataTable thead th{
     color: #1E4495;
     font-size: 15px;
 }
+.exp-trucks a{
+    font-size: 12px;
+}
 
 .reports-panel a:focus, .reports-panel a:hover, .reports-panel a:active {
     color: #fff !important;
@@ -1260,7 +1263,7 @@ select {
 }
 
 .exp-trucks li a:hover {
-    color: #1E4495 !important;
+    color: #1E4495 ;
 }
 
 .pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
