--- a/client/views/partials/admin/services/payments.html
+++ b/client/views/partials/admin/services/payments.html
@@ -30,21 +30,21 @@
             <td data-title="'S No'">
                 {{$index+1}}
             </td>
-            <td data-title="'Customer name'" sortable="'payment.userName'" class="clickable-item">
+            <td data-title="'Customer name'" sortable="'userName'" class="clickable-item">
                 {{payment.userName}}
             </td>
-            <td data-title="'Mobile'" sortable="'payment.contactPhone'" class="clickable-item">
+            <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">
                 {{payment.contactPhone }}
             </td>
-            <td data-title="'GPS Reg Date'" sortable="'payment.gpsDate'" class="clickable-item">
+            <td data-title="'GPS Reg Date'" sortable="'gpsDate'" class="clickable-item">
                 {{payment.gpsDate | date:'dd/MM/yyyy'}}
             </td>
-            <td data-title="'GPS'" sortable="'payment.gpsEnabled'" class="clickable-item">
+            <td data-title="'GPS'" sortable="'gpsEnabled'" class="clickable-item">
                 {{payment.gpsEnabled}}
             </td>
-            <td data-title="'ERP Reg Date'" sortable="'payment.erpDate'" class="clickable-item">
+            <td data-title="'ERP Reg Date'" sortable="'erpDate'" class="clickable-item">
                 {{payment.erpDate  | date:'dd/MM/yyyy'}}
-            <td data-title="'ERP'" sortable="'payment.erpEnabled'" class="clickable-item">
+            <td data-title="'ERP'" sortable="'erpEnabled'" class="clickable-item">
                 {{payment.erpEnabled}}
             </td>
             <td data-title="'Payment'" class="clickable-item">
