--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -32,7 +32,7 @@
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="tripParams">
                 <tr ng-repeat="trips in currentPageOfTrips" style="text-align: center;">
                     <td data-title="'Trip Date'" sortable="'date'" class="clickable-item">
-                        {{trips.date | date:'yyyy-MM-dd'}}
+                        {{trips.date | date:'dd-MM-yyyy'}}
                     </td>
                     <td data-title="'Reg No'" sortable="'truckName'" class="clickable-item">{{
                         trips.attrs.truckName}}
